--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d09a64">  <td>23/05/10 16:40:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testUserDetails.getJsonfieldData()[pri:3, instance:api.training.test.testUserDetails@73e22a3d]">getJsonfieldData</td> 
-  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="d09a64">  <td>23/05/10 16:40:15</td>   <td>-6638</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;testUserDetails.setup()[pri:0, instance:api.training.test.testUserDetails@73e22a3d]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="d09a64">  <td>23/05/10 16:40:19</td>   <td>-2757</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testUserDetails.testResponseUserData()[pri:2, instance:api.training.test.testUserDetails@73e22a3d]">testResponseUserData</td> 
-  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="d09a64">  <td>23/05/10 16:40:15</td>   <td>-6608</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testUserDetails.testUserData()[pri:1, instance:api.training.test.testUserDetails@73e22a3d]">testUserData</td> 
+<tr bgcolor="d09a64">  <td>23/06/10 19:32:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="N_Enter_wrong_enpoint.test_EnterWrongEndpoint()[pri:0, instance:api.bookstore.tests.N_Enter_wrong_enpoint@932bc4a]">test_EnterWrongEndpoint</td> 
   <td>main@1361960727</td>   <td></td> </tr>
 </table>
