--- a/test-output/old/PetSuite/classes.html
+++ b/test-output/old/PetSuite/classes.html
@@ -4,22 +4,40 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>api.training.test.testUserDetails</td>
+<td>api.training.test.testPutRequestByPOJOClass</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>testGetJsonfieldData</td>
+<td>testputRequestpojo</td>
 <td>&nbsp;</td></tr>
 <tr>
-<td>&nbsp;</td>
-<td>testUserData</td>
-<td>&nbsp;</td></tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
 <tr>
 <td>&nbsp;</td>
-<td>testResponseUserData</td>
+<td>setup</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>api.training.test.testPostRequestByPojoClassData</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>reqresPostRequest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
